--- a/index.html
+++ b/index.html
@@ -46,5 +46,6 @@
 </head>
   <body class="bg-white text-gray-900 antialiased selection:bg-red-100 selection:text-red-900">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
